# FunMail

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/funmail-admin/: Cargo.toml
crates/funmail-admin/src/: acme.rs  auth.rs  db.rs  main.rs  state.rs  tasks.rs
crates/funmail-admin/src/api/: auth_routes.rs  cert_routes.rs  contacts_routes.rs  domain_routes.rs  log_routes.rs  mail_routes.rs  mailbox_routes.rs  mod.rs  queue_routes.rs  settings_routes.rs  stats_routes.rs  system_routes.rs  user_routes.rs  webmail_routes.rs
crates/funmail-common/: Cargo.toml
crates/funmail-common/src/: config.rs  db.rs  lib.rs  security.rs  tls.rs  types.rs
crates/funmail-delivery/: Cargo.toml
crates/funmail-delivery/src/: dkim.rs  dns.rs  local.rs  main.rs  remote.rs
crates/funmail-imap/: Cargo.toml
crates/funmail-imap/src/: main.rs
crates/funmail-pop3/: Cargo.toml
crates/funmail-pop3/src/: main.rs
crates/funmail-smtp/: Cargo.toml
crates/funmail-smtp/src/: main.rs  session.rs  store.rs
docker/: Dockerfile  Dockerfile.release  docker-compose.yml
frontend/: index.html
frontend/src/: api.js  custom.css  router.js
frontend/src/pages/: accounts.js  certs.js  dashboard.js  domains.js  logs.js  mail.js  mailboxes.js  queue.js  settings.js
frontend/webmail/: index.html
frontend/webmail/src/: api.js  app.js  style.css  util.js
frontend/webmail/src/pages/: login.js  maillist.js
sql/: logs_schema.sql  schema.sql
