[package]
name = "funmail-smtp"
version.workspace = true
edition.workspace = true

[dependencies]
funmail-common = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mail-parser = { workspace = true }
mail-builder = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
hickory-resolver = { workspace = true }
bytes = { workspace = true }
